GMM_Main/src/objects/Stage_Question__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It states whether the stage question is active or not.</description>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Comments__c</fullName>
        <defaultValue>true</defaultValue>
        <description>It states whether comments are allowed or not</description>
        <label>Allow Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Yes_Comments_Required__c</fullName>
        <description>selects from a set of values and based on the values its controls allow comments field</description>
        <label>If Yes, Comments Required</label>
        <picklist>
            <controllingField>Allow_Comments__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Questions are entered here</description>
        <label>Question?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <picklist>
            <picklistValues>
                <fullName>Alternate Panel Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Reviewers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted Expertise Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Control Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter-Rater Reliability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Review Quality Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Liaison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Coordinator</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Scoring_Method__c</fullName>
        <label>Scoring Method</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number (1-100)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes/No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Factor Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Four Factor Option</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <description>It selects a value from set of values, which derives the section in the stages object</description>
        <label>Section</label>
        <picklist>
            <picklistValues>
                <fullName>Section 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stages_ID__c</fullName>
        <label>Stages ID</label>
        <referenceTo>Stages__c</referenceTo>
        <relationshipLabel>Stage Question</relationshipLabel>
        <relationshipName>Stage_Question</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <description>Weight for that particular question is entered</description>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Stage Question</label>
    <nameField>
        <displayFormat>Stage Question-{0000}</displayFormat>
        <label>Stage Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Question</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Section_Selection</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(Stages_ID__r.Section_1__c == Null,ISPICKVAL(Section__c , &apos;Section 1&apos;)),(AND(Stages_ID__r.Section_2__c == Null ,ISPICKVAL(Section__c , &apos;Section 2&apos;))),(AND(Stages_ID__r.Section_3__c == Null ,ISPICKVAL(Section__c , &apos;Section 3&apos;))),(AND(Stages_ID__r.Section_4__c == Null ,ISPICKVAL(Section__c , &apos;Section 4&apos;))), 
(AND(Stages_ID__r.Section_5__c ==Null ,ISPICKVAL(Section__c , &apos;Section 5&apos;))))</errorConditionFormula>
        <errorMessage>Selected Section doesnt have TITLE</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stage_Question_Active</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Active__c = TRUE,( ISBLANK( Question__c ) ))</errorConditionFormula>
        <errorMessage>Question should be filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Yes_comments_req_when_check_box_checked</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( Allow_Comments__c , ISBLANK(TEXT(If_Yes_Comments_Required__c)))</errorConditionFormula>
        <errorDisplayField>If_Yes_Comments_Required__c</errorDisplayField>
        <errorMessage>If Yes, Comments Required should be required if the Allow Comments checkbox is checked</errorMessage>
    </validationRules>
</CustomObject>